[project]
name = ""
version = ""
description = ""
authors = [
    {name = "pscly", email = "pscly@outlook.com"},
]
dependencies = [
    "mkdocs>=1.3.0",
    "mkdocs-rtd-dropdown>=1.0.2",
    "mkdocs-material>=8.2.9",
]
requires-python = ">=3.9"
license = {text = "GPL"}
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
init = "mkdocs new ."
start = "mkdocs serve -a 0.0.0.0:8000"
